# chatcli

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  chat.py  chatcli.py  pyproject.toml  requirements.txt  run.sh  test_chat.py  test_chatcli.py  todo
.github/workflows/: test.yml
chatcli/: __main__.py  chatcli.py  log.py  plugins.py
chatcli_gpt/: __main__.py  chatcli.py  cli.py  conversation.py  log.py  models.py  plugins.py
chatcli_gpt/data/: default_log
tests/: conftest.py  test_chatcli.py  test_cli.py  test_conversation.py  test_plugins.py
