[tool.poetry]
name = "chatcli-gpt"
version = "0.4.0"
description = "A command line interface for interacting with GPT-3. It's orientated around an append only chat log so you get a complete history of your conversations."
readme = "README.md"
license = "MIT"
authors = ["Adam Kelly <adam@cthulahoops.org>"]
repository = "https://github.com/cthulahoops/chatcli"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
prompt-toolkit = "^3.0.38"
markdown = "^3.4.1"
click = "^8.1.3"
click-default-group = "^1.2.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
tiktoken = "^0.3.2"
python-dateutil = "^2.8.2"
duckduckgo-search = "^2.8.5"
pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.1"

[tool.poetry.scripts]
chatcli = "chatcli_gpt.chatcli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
