[tool.poetry]
name = "chatcli-gpt"
version = "0.5.4"
description = "A command line interface for interacting with GPT-3. It's orientated around an append only chat log so you get a complete history of your conversations."
readme = "README.md"
license = "MIT"
authors = ["Adam Kelly <adam@cthulahoops.org>"]
repository = "https://github.com/cthulahoops/chatcli"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
prompt-toolkit = "^3.0.38"
markdown = "^3.4.1"
click = "^8.1.3"
click-default-group = "^1.2.2"
tiktoken = "^0.3.2"
python-dateutil = "^2.8.2"
duckduckgo-search = "^2.8.5"
wolframalpha = "^5.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.261"

[tool.poetry.scripts]
chatcli = "chatcli_gpt.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["A", "B", "C","E", "F", "G", "I", "N", "Q", "T", "W", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]
ignore = ["INP001", "I001", "PLR2004", "T201", "EM101", "EM102", "PGH001"]
line-length = 120

[tool.black]
line-length = 120
